2011-09-08  Alexey Proskuryakov  <ap@apple.com>

        Some file-url-mimetypes subtests fail on rare extensions
        https://bugs.webkit.org/show_bug.cgi?id=67679

        Reviewed by Darin Adler.

        * platform/mac/fast/loader/file-url-mimetypes-2-expected.txt:
        * platform/mac/fast/loader/file-url-mimetypes-2.html:
        * platform/mac/fast/loader/file-url-mimetypes-expected.txt:
        * platform/mac/fast/loader/file-url-mimetypes.html:
        It doesn't appear important to investigate why a few subtests fail on some machines, so
        just removing those.

2011-09-08  Alexey Proskuryakov  <ap@apple.com>

        Some cookie related tests fail on Lion
        https://bugs.webkit.org/show_bug.cgi?id=67674

        Reviewed by Mark Rowe.

        Use private browsing mode to work around a CFNetwork issue where these tests can affect each
        other's results. This should not affect their behavior in any other way.

        * http/tests/security/cookies/third-party-cookie-blocking-main-frame.html:
        * http/tests/security/cookies/third-party-cookie-blocking-user-action.html:
        * http/tests/security/cookies/third-party-cookie-blocking.html:

2011-09-08  Ryosuke Niwa  <rniwa@webkit.org>

        Rebaseline filters-image-05-f.svg expected output (text) for SnowLeopard.
        https://bugs.webkit.org/show_bug.cgi?id=67781

        Unreviewed rebaseline for Mac.

        * platform/mac/svg/W3C-SVG-1.1-SE/filters-image-05-f-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/filters-image-05-f-expected.txt: Added.

2011-09-08  Nate Chapin  <japhet@chromium.org>

        Unreviewed, chromium expectations tweaks.

        * platform/chromium-cg-mac-leopard/tables/mozilla_expected_failures/bugs/bug85016-expected.png: Added.
        * platform/chromium/test_expectations.txt:

2011-09-07  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: get rid of RawSourceCode.createSourceMappingIfNeeded.