@@ -1,3 +1,14 @@
+2011-09-08  Hayato Ito  <hayato@chromium.org>
+
+        Add a layout test for the case where an accesskey is defined in shadow DOM.
+
+        https://bugs.webkit.org/show_bug.cgi?id=67096
+
+        Reviewed by Dimitri Glazkov.
+
+        * fast/dom/shadow/access-key-expected.txt: Added.
+        * fast/dom/shadow/access-key.html: Added.
+
 2011-09-08  Alexey Proskuryakov  <ap@apple.com>
 
         Some file-url-mimetypes subtests fail on rare extensions
